--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   <div class="hero">
     <!--Twitter-->
     <div class="card card-1">
-      <img src="images/red.png">
+      <img src=".images/red.png">
       <h1>Sneakers <br> Red And White</h1>
       <span class="fa fa-star checked-red"></span>
       <span class="fa fa-star checked-red"></span>
@@ -147,7 +147,7 @@
     <!--Instagram-->
 
     <div class="card card-2">
-      <img src="images/blue.png">
+      <img src=".images/blue.png">
       <h1>Sneakers <br> Blue And Green</h1>
       <span class="fa fa-star checked-blue"></span>
       <span class="fa fa-star checked-blue"></span>
@@ -161,7 +161,7 @@
 
     <!--Youtube-->
     <div class="card card-3">
-      <img src="images/gray.png">
+      <img src=".images/gray.png">
       <h1>Sneakers <br> Gray And Orange</h1>
       <span class="fa fa-star checked-orange"></span>
       <span class="fa fa-star checked-orange"></span>
